...
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="7qg-j3-968"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="gQD-1g-FFx"/>
                                </constraints>
                                <items>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="M9g-41-Rrj"/>
                                    <barButtonItem title="Share" image="square.and.arrow.up" catalog="system" id="qHs-X8-xcv">
                                        <connections>
                                            <action selector="shareButtonPressed:" destination="jpg-gr-ShF" id="BgI-cb-uF8"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="eX6-Tv-xPR"/>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="fXc-Jq-dVN"/>
...
                                <segue destination="nfh-xn-jhC" kind="show" identifier="mainToCollection" id="1gv-hA-jFb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="cardView" destination="Bts-7g-pnA" id="Wk6-gt-kz9"/>
                        <outlet property="collectionButton" destination="sSu-jw-cTH" id="auR-gH-DQd"/>
                        <outlet property="saveButton" destination="eix-IU-TsW" id="kOq-j5-OQe"/>
                        <outlet property="shareButton" destination="qHs-X8-xcv" id="LC9-zj-rUj"/>
                        <outlet property="toolbar" destination="ZI0-C0-QUe" id="1E1-XT-9aH"/>
                        <outlet property="undoButton" destination="c3g-fk-JM1" id="5Cm-E7-yo9"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wgG-Tt-dvs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2568.8000000000002" y="-456.52173913043481"/>
        </scene>
...
