/* 
  Localizable.strings (English)
  CatCards

  Created by Jason Ou Yang on 2020/12/17.
  Copyright © 2020 Jason Ou Yang. All rights reserved.
*/


/// HomeVC

// Instruction Text
"GREET_TITLE" = "Welcome";
"GREET_1" = "Here we have countless cat pictures provided by cat lovers around the world.";
"GREET_2" = "The more pictures you see, the more chance you will find pleasure and joy cats could provide.";
"ZOOM_GESTURE_TITLE" = "Look Closer";
"HOW_TO_ZOOM_IN" = "Pinch two fingers apart to zoom in the card.";
"BUTTON_TITLE" = "How buttons work";
"SHARE_BUTTON" = "Share the picture";
"UNDO_BUTTON" = "Retrieve the last card";
"SAVE_BUTTON" = "Save the picture";
"VIEW_SAVED" = "Show saved pictures";
"PROMPT" = "👆 Swipe me to see the next card";
"START_PROMPT" = "😺 Swipe me to start";
"OVERLAY_TITLE" = "Toggle the Info Overlay";
"OVERLAY_HOW_TO_TOGGLE" = "Tap the card once to toggle the overlay over the card.";

/// Error Alert Messages

// API Error
"API_ERROR_ALERT_TITLE" = "Server did not respond";
"API_ERROR_ALERT_MESSAGE" = "Service provider TheCatAPI did not respond";
"API_ERROR_ALERT_ACTION" = "Try Again";

// Network Error
"NETWORK_ERROR_ALERT_TITLE" = "Network error occured";
"NETWORK_ERROR_ALERT_MESSAGE" = "Cannot reach the network service.\n Please check your internet connection.";
"NETWORK_ERROR_ALERT_ACTION" = "Try Again";

// Database Error
"DATABASE_ERROR_ALERT_TITLE" = "Storage is full.";
"DATABASE_ERROR_ALERT_MESSAGE" = "Currently you can save up to 36 images";
"DATABASE_ERROR_ALERT_ACTION" = "OK";


/// CollectionVC

// Background view
"NO_DATA_LABEL_TEXT" = "No Saved Pictures";


/// SingleImageVC

// Image Deleting Warning
"DELETE_WARNING_ALERT_TITLE" = "This action can not be reverted.";
"DELETE_WARNING_ALERT_ACTION" = "Delete Picture";
"DELETE_WARNING_ALERT_CANCEL" = "Cancel";

// Trivia
"TRIVIA_0" = "Cats have 230 bones, a whopping 24 more bones than humans.";
"TRIVIA_1" = "Cats with a question mark-shaped tail are feeling playful.";
"TRIVIA_2" = "Cats have rough tongues that can clean all the meat off of a bone. (Of course, don’t feed bones to your pets because they can splinter.";
"TRIVIA_3" = "Cats use their long tails for balance which is why they sometimes display such impressive acrobatics.";
"TRIVIA_4" = "Cats use their whiskers to navigate through the world. They use them to help determine if they can fit in a small space because their whiskers are approximately the same width as their body.";
"TRIVIA_5" = "Cats move with their right feet and then their left feet. The only other animals that walk this way are camels and giraffes.";
"TRIVIA_6" = "Cats spend 70% of their lives sleeping.";
"TRIVIA_7" = "Cats prefer to have a litter box for themselves so have one for each of your kitties.";
"TRIVIA_8" = "Cat’s share 95.6 percent of their genome with tigers and demonstrate several of the same behaviors.";
"TRIVIA_9" = "Indoor cats live longer than outdoor cats.";
"TRIVIA_10" = "There are over 500 million domestic cats in the world.";
"TRIVIA_11" = "Cats and humans have been associated for nearly 10000 years.";
"TRIVIA_12" = "Cats have flexible bodies and teeth adapted for hunting small animals such as mice and rats.";
"TRIVIA_13" = "Domestic cats usually weigh around 4 kilograms to 5 kilograms.";
"TRIVIA_14" = "The heaviest domestic cat on record is 21.297 kilograms.";
"TRIVIA_15" = "Cats can be very sneaky by walking their back paws step almost exactly in the same place as the front paws did beforehand, this keeps noise to a minimum level.";
"TRIVIA_16" = "Cats have powerful night vision, allowing them to see at light levels six times lower than what a human needs in order to see.";
"TRIVIA_17" = "Cats also have excellent hearing and a powerful sense of smell.";
"TRIVIA_18" = "Older cats can at times act aggressively towards kittens.";
"TRIVIA_19" = "Kittens playing fighting with each other may be a way for them to practice and learn skills for hunting.";
"TRIVIA_20" = "On average cats live for around 12 to 15 years.";
"TRIVIA_21" = "Cats spend a large amount of time licking their coats to keep them clean.";
"TRIVIA_22" = "Feral cats are often seen as pests and threats to native animals.";
"TRIVIA_23" = "An orange tabby cat called Stubbs was the mayor of Talkeetna, a small town in Alaska for 20 years.";
"TRIVIA_24" = "The record for the longest cat ever is 48.5 inches (123 cm).";
"TRIVIA_25" = "The richest cat in the world had £7 million. When Ben Rea (UK) died in May 1988, he bequeathed his £7-million ($12.5-million) fortune to Blackie.";
"TRIVIA_26" = "Isaac Newton invented the cat door.";
"TRIVIA_27" = "On October 18th 1963 Felicette, also known as ‘Astrocat’ was the first and only cat to go to space.";
"TRIVIA_28" = "Ancient Egyptians would shave off their eyebrows when their cats died.";
"TRIVIA_29" = "A house cat can reach speeds of up to 30 mph (48 kph).";
"TRIVIA_30" = "The oldest cat in the world was 38 years old.";
"TRIVIA_31" = "Merlin, a black and white cat from Torquay, UK. His purr is 67.8 dB, which is nearly the same volume as a shower.";
"TRIVIA_32" = "The most tricks performed by a cat in one minute is 26, and was achieved by Alexis and Anika Moritz from Austria.";
"TRIVIA_33" = "The longest domestic cat ever was a Maine Coon named Mymains Stewart Gilligan (aka Stewie) at 123 cm (48.5 inches) long.";

// Quotes
"QUOTE_0" = "“In ancient times cats were worshipped as gods; they have not forgotten this.” – Terry Pratchett";
"QUOTE_1" = "“I had been told that the training procedure with cats was difficult. It’s not. Mine had me trained in two days.” – Bill Dana";
"QUOTE_2" = "“Cats are inquisitive, but hate to admit it.” – Mason Cooley";
"QUOTE_3" = "“As anyone who has ever been around a cat for any length of time well knows, cats have enormous patience with the limitations of the humankind.” – Cleveland Amory";
"QUOTE_4" = "“I have studied many philosophers and many cats. The wisdom of cats is infinitely superior.” – Hippolyte Taine";
"QUOTE_5" = "“There are two means of refuge from the miseries of life: music and cats.” – Albert Schweitzer";
"QUOTE_6" = "“Owners of dogs will have noticed that, if you provide them with food and water and shelter and affection, they will think you are God. Whereas owners of cats are compelled to realize that, if you provide them with food and water and affection, they draw the conclusion that they are God.” – Christopher Hitchens";
"QUOTE_7" = "“A happy arrangement: many people prefer cats to other people, and many cats prefer people to other cats.” – Mason Cooley";
"QUOTE_8" = "“It is impossible for a lover of cats to banish these alert, gentle, and discriminating friends, who give us just enough of their regard and complaisance to make us hunger for more.” – Agnes Repplier";
"QUOTE_9" = "“How we behave toward cats here below determines our status in heaven.” – Robert A. Heinlein";
"QUOTE_10" = "“I used to love dogs until I discovered cats.” – Nafisa Joseph";
"QUOTE_11" = "“Cats are connoisseurs of comfort.” – James Herriot";
"QUOTE_12" = "“Just watching my cats can make me happy.” – Paula Cole";
"QUOTE_13" = "“I’m not sure why I like cats so much. I mean, they’re really cute obviously. They are both wild and domestic at the same time.” – Michael Showalter";
"QUOTE_14" = "“You can not look at a sleeping cat and feel tense.” – Jane Pauley";
"QUOTE_15" = "“The phrase ‘domestic cat’ is an oxymoron.” – George Will";
"QUOTE_16" = "“One cat just leads to another.” – Ernest Hemingway";
"QUOTE_17" = "“I love cats because I enjoy my home; and little by little, they become its visible soul.” – Jean Cocteau";
"QUOTE_18" = "“I have felt cats rubbing their faces against mine and touching my cheek with claws carefully sheathed. These things, to me, are expressions of love.” – James Herriot";
"QUOTE_19" = "“I love my cats more than I love most people. Probably more than is healthy.” – Amy Lee";
"QUOTE_20" = "“The smallest feline is a masterpiece.” – Leonardo da Vinci";
"QUOTE_21" = "“Kittens are angels with whiskers.” – Alexis Flora Hope";
"QUOTE_22" = "“A kitten is in the animal world what a rosebud is in the garden.” – Robert Southey";
"QUOTE_23" = "“A kitten is the delight of a household. All day long a comedy is played out by an incomparable actor.” – Champfleury";
"QUOTE_24" = "“Heaven will never be Paradise unless my cats are there waiting for me.” – Unknown";
"QUOTE_25" = "“Cats leave paw prints in your heart, forever and always.” – Unknown";
"QUOTE_26" = "“When the cat you love becomes a memory, the memory becomes a treasure.” – Unknown";
"QUOTE_27" = "“No one can truly understand the bond we form with the cats we love until they experience the loss of one.” – Unknown";
"QUOTE_28" = "“Cats choose us; we don’t own them.” – Kristin Cast";
"QUOTE_29" = "“Perhaps one reason we are fascinated by cats is because such a small animal can contain so much independence, dignity, and freedom of spirit. Unlike the dog, the cat’s personality is never bet on a human’s. He demands acceptance on his own terms.” – Lloyd Alexander";
"QUOTE_30" = "“Cats know how to obtain food without labor, shelter without confinement, and love without penalties.” – W. L. George";
"QUOTE_31" = "“Cats have it all – admiration, an endless sleep, and company only when they want it.” – Rod McKuen";
"QUOTE_32" = "“Cats will outsmart dogs every time.” – John Grogan";
"QUOTE_33" = "“I believe cats to be spirits come to earth. A cat, I am sure, could walk on a cloud without coming through.” – Jules Verne";
"QUOTE_34" = "“Way down deep, we’re all motivated by the same urges. Cats have the courage to live by them.” – Jim Davis";
"QUOTE_35" = "“A cat has absolute emotional honesty: human beings, for one reason or another, may hide their feelings, but a cat does not.” – Ernest Hemingway";
"QUOTE_36" = "“Time spent with cats is never wasted.” – Sigmund Freud";
"QUOTE_37" = "“Cats rule the world.” – Jim Davis";
"QUOTE_38" = "“Like all pure creatures, cats are practical.” – William S. Burroughs";
