
/* Class = "UIBarButtonItem"; title = "Share"; ObjectID = "6Ck-bA-J7B"; */
"6Ck-bA-J7B.title" = "Share";

/* Class = "UIBarButtonItem"; title = "Delete"; ObjectID = "QaQ-75-ktH"; */
"QaQ-75-ktH.title" = "Delete";

/* Class = "UIBarButtonItem"; title = "Undo"; ObjectID = "c3g-fk-JM1"; */
"c3g-fk-JM1.title" = "Undo";

/* Class = "UIBarButtonItem"; title = "Save"; ObjectID = "eix-IU-TsW"; */
"eix-IU-TsW.title" = "Save";

/* Class = "UIBarButtonItem"; title = "Share"; ObjectID = "qHs-X8-xcv"; */
"qHs-X8-xcv.title" = "Share";
