/* 
  Localizable.strings (English)
  CatCard

  Created by Jason Ou Yang on 2020/12/17.
  Copyright © 2020 Jason Ou Yang. All rights reserved.
*/


/// MainViewController

// Instruction Text
"GREET_TITLE" = "Welcome to Cat Cards";
"GREET_1" = "Here we have countless cat pictures provided by cat lovers around the world.";
"GREET_2" = "I'm sure you'd love them.";
"ZOOM_GESTURE_TITLE" = "Look Closer";
"HOW_TO_ZOOM_IN" = "Pinch two fingers apart to zoom in the card.";
"BUTTON_TITLE" = "How buttons work";
"SHARE_BUTTON" = "Share the picture";
"UNDO_BUTTON" = "Retrieve the last card";
"SAVE_BUTTON" = "Save the picture";
"VIEW_SAVED" = "Show downloaded pictures";
"PROMPT" = "🐱 Swipe me to see the next card";
"START_PROMPT" = "😺 Swipe me to start";

// Network Error Alert
"NETWORK_ERROR_ALERT_TITLE" = "🙀 Cannot connect to the Internet.";
"NETWORK_ERROR_ALERT_MESSAGE" = "Signal from cat planet is too weak.\n Please check your internet connection";
"NETWORK_ERROR_ALERT_ACTION" = "Try Again";

// Databse Error Alert
"DATABASE_ERROR_ALERT_TITLE" = "😿 Maximum number of saved images is reached.";
"DATABASE_ERROR_ALERT_MESSAGE" = "Currently you can save 24 images at most.";
"DATABASE_ERROR_ALERT_ACTION" = "OK";


/// CollectionVC

// Background view
"NO_DATA_LABEL_TEXT" = "No Saved Pictures";


/// SingleImageVC

// Image Deleting Warning
"DELETE_WARNING_ALERT_TITLE" = "This action can not be reverted.";
"DELETE_WARNING_ALERT_ACTION" = "Delete Picture";
"DELETE_WARNING_ALERT_CANCEL" = "Cancel";
